Settings Screen Part Two

--- a/settings.html
+++ b/settings.html
@@ -28,7 +28,9 @@
 
         <header class="alt-header">
             <div class="alt-header__column">
-                <i class="fa-solid fa-chevron-left"></i>
+                <a href="javascript:history.back();">
+                    <i class="fa-solid fa-chevron-left"></i
+                ></a>
             </div>
             <div class="alt-header__column">
                 <h1 class="alt-header__title">Settings</h1>
@@ -41,16 +43,80 @@
         <main class="main-screen">
             <ul class="settings-list">
                 <li class="settings__setting">
-                    <img src="image/Setting Page/Notices.PNG" />
-                    <span>Notices</span>
+                    <div class="settings__setting-column">
+                        <img src="image/Setting Page/Notices.PNG" />
+                        <span>Notices</span>
+                    </div>
+                    <div class="settings_-setting-column"></div>
                 </li>
                 <li class="settings__setting">
-                    <img src="image/Setting Page/Kokoa Lab.PNG" />
-                    <span>Kokoa Lab</span>
+                    <div class="settings_-setting-column">
+                        <img src="image/Setting Page/Kokoa Lab.PNG" />
+                        <span>Kokoa Lab</span>
+                    </div>
+                    <div class="settings__setting-column"></div>
                 </li>
                 <li class="settings__setting">
-                    <img src="image/Setting Page/Version.PNG" />
-                    <span>Version</span>
+                    <div class="settings_-setting-column">
+                        <img src="image/Setting Page/Version.PNG" />
+                        <span>Version</span>
+                    </div>
+                    <div class="settings__setting-column">Latest Version</div>
+                </li>
+                <li class="settings__setting">
+                    <div class="settings__setting-column">
+                        <img src="image/Setting Page/Privacy.PNG" />
+                        <span>Privacy</span>
+                    </div>
+                    <div class="settings_-setting-column"></div>
+                </li>
+                <li class="settings__setting">
+                    <div class="settings_-setting-column">
+                        <img src="image/Setting Page/Notifications.PNG" />
+                        <span>Notifications</span>
+                    </div>
+                    <div class="settings__setting-column"></div>
+                </li>
+                <li class="settings__setting">
+                    <div class="settings_-setting-column">
+                        <img src="image/Setting Page/Friends.PNG" />
+                        <span>Friends</span>
+                    </div>
+                    <div class="settings__setting-column"></div>
+                </li>
+                <li class="settings__setting">
+                    <div class="settings__setting-column">
+                        <img src="image/Setting Page/Chats.PNG" />
+                        <span>Chats</span>
+                    </div>
+                    <div class="settings_-setting-column"></div>
+                </li>
+                <li class="settings__setting">
+                    <div class="settings_-setting-column">
+                        <img src="image/Setting Page/Display.PNG" />
+                        <span>Display</span>
+                    </div>
+                    <div class="new-badge">N</div>
+                    <div class="settings__setting-column"></div>
+                </li>
+                <li class="settings__setting">
+                    <div class="settings_-setting-column">
+                        <img src="image/Setting Page/Themes.PNG" />
+                        <span>Themes</span>
+                    </div>
+                    <div class="new-badge">N</div>
+                    <div class="settings__setting-column">Default theme</div>
+                </li>
+                <li class="settings__setting">
+                    <div class="settings_-setting-column">
+                        <img
+                            src="image/Setting Page/Call.PNG"
+                            width="25px"
+                            height="25px"
+                        />
+                        <span>Call</span>
+                    </div>
+                    <div class="settings__setting-column"></div>
                 </li>
             </ul>
         </main>
