Settings and Chat Screen part One

--- a/chat.html
+++ b/chat.html
@@ -9,7 +9,7 @@
 
         <title>Chat - Kokoa Talk</title>
     </head>
-    <body>
+    <body id="chat-screen">
         <div class="status-bar">
             <div class="status-bar__column">
                 <span>No Service</span>
@@ -32,42 +32,22 @@
                     <i class="fa-solid fa-chevron-left"></i
                 ></a>
             </div>
-            <div class="alt-header__column">
-                <h1 class="alt-header__title">Settings</h1>
+            <div class="alt-header__column alt-header__column-chat">
+                <h1 class="alt-header__title alt-header__title-chat">
+                    Kokoa Talk
+                </h1>
             </div>
-            <div class="alt-header__column">
-                <i class="fa fa-magnifying-glass"></i>
+            <div class="alt-header__column alt-header__column-chat">
+                <span>
+                    <i class="fa fa-magnifying-glass glass-chat"></i>
+                </span>
+                <span>
+                    <i class="fa-solid fa-bars"></i>
+                </span>
             </div>
         </header>
 
         <main class="main-screen"></main>
-
-        <nav class="nav">
-            <ul class="nav__list">
-                <li class="nav__btn">
-                    <a class="nav__link" href="friends.html"
-                        ><i class="fa-regular fa-user fa-2x"></i
-                    ></a>
-                </li>
-                <li class="nav__btn">
-                    <a class="nav__link" href="chats.html">
-                        <span class="nav__notofication"></span
-                        ><i class="fa-regular fa-comment fa-2x"></i
-                    ></a>
-                </li>
-                <li class="nav__btn">
-                    <a class="nav__link" href="find.html">
-                        <i class="fa fa-magnifying-glass fa-2x"></i
-                    ></a>
-                </li>
-                <li class="nav__btn">
-                    <a class="nav__link" href="more.html">
-                        <span class="nav__dot"></span>
-                        <i class="fas fa-ellipsis fa-2x"></i
-                    ></a>
-                </li>
-            </ul>
-        </nav>
 
         <script
             src="https://kit.fontawesome.com/75ea5a755a.js"
