--- a/chats.html
+++ b/chats.html
@@ -48,7 +48,9 @@
                             class="user-component__avatar user-component__avatar"
                         />
                         <div class="user-component_text">
-                            <h4 class="user-component__title--sm">KokoaTalk</h4>
+                            <h4 class="user-component__title--sm">
+                                Kokoa Talk
+                            </h4>
                             <h6 class="user-component__subtitle">
                                 Please check My Kokoa Account Info
                             </h6>
