--- a/find.html
+++ b/find.html
@@ -42,23 +42,27 @@
         <main class="main-screen">
             <div class="icon-row">
                 <div class="icon-row__icon">
-                    <img src="image/Find Page/QR Code.PNG" /><span
-                        >QR Code</span
-                    >
+                    <img
+                        src="https://lambent-daifuku-570a42.netlify.app/Find%20Page/QR%20Code.PNG"
+                    /><span>QR Code</span>
                 </div>
                 <div class="icon-row__icon icon-row__icon-contact">
                     <img
                         class="contact-img"
-                        src="image/Find Page/Contact Book.PNG"
+                        src="https://lambent-daifuku-570a42.netlify.app/Find%20Page/Contact%20Book.PNG"
                     /><span class="contact">
                         <em> Add by </em> <br />Contacts</span
                     >
                 </div>
                 <div class="icon-row__icon">
-                    <img src="image/Find Page/ID.PNG" /><span>Add by ID</span>
+                    <img
+                        src="https://lambent-daifuku-570a42.netlify.app/Find%20Page/ID.PNG"
+                    /><span>Add by ID</span>
                 </div>
                 <div class="icon-row__icon">
-                    <img src="image/Find Page/Invite.PNG" /><span>Invite</span>
+                    <img
+                        src="https://lambent-daifuku-570a42.netlify.app/Find%20Page/Invite.PNG"
+                    /><span>Invite</span>
                 </div>
             </div>
 
