--- a/more.html
+++ b/more.html
@@ -53,43 +53,52 @@
                             <h6 class="user-component__subtitle-p">
                                 +82 010-****-1746
                             </h6>
-                            <img src="image/Exclamation mark.PNG" alt="" />
+                            <img
+                                src="https://lambent-daifuku-570a42.netlify.app/More%20Page/Exclamation%20mark.PNG"
+                                alt=""
+                            />
                         </div>
                     </div>
                 </div>
                 <div class="user-component__column-message">
-                    <img src="image/More Page/Comment.PNG" />
+                    <img
+                        src="https://lambent-daifuku-570a42.netlify.app/More%20Page/Comment.PNG"
+                    />
                 </div>
             </div>
 
             <div class="icon-row__more">
                 <div class="icon-row__icon__more ia">
-                    <img src="image/More Page/Calendar.PNG" /><span
-                        >Calendar</span
-                    >
+                    <img
+                        src="https://lambent-daifuku-570a42.netlify.app/More%20Page/Calendar.PNG"
+                    /><span>Calendar</span>
                 </div>
                 <div class="icon-row__icon__more ib">
                     <div class="dot"></div>
-                    <img src="image/More Page/Talk Drive.PNG" />
+                    <img
+                        src="https://lambent-daifuku-570a42.netlify.app/More%20Page/Talk%20Drive.PNG"
+                    />
                     <span>Talk Drive</span>
                 </div>
                 <div class="icon-row__icon__more ic">
-                    <img src="image/More Page/Emoticons.PNG" /><span
-                        ><em>Emoticons</em></span
-                    >
+                    <img
+                        src="https://lambent-daifuku-570a42.netlify.app/More%20Page/Emoticons.PNG"
+                    /><span><em>Emoticons</em></span>
                 </div>
                 <div class="icon-row__icon__more id">
-                    <img src="image/More Page/Themes.PNG" /><span>Themes</span>
+                    <img
+                        src="https://lambent-daifuku-570a42.netlify.app/More%20Page/Themes.PNG"
+                    /><span>Themes</span>
                 </div>
                 <div class="icon-row__icon__more ie">
-                    <img src="image/More Page/Account.PNG" /><span
-                        >Account</span
-                    >
+                    <img
+                        src="https://lambent-daifuku-570a42.netlify.app/More%20Page/Account.PNG"
+                    /><span>Account</span>
                 </div>
                 <div class="icon-row__icon__more if">
-                    <img src="image/More Page/Openchat.PNG" /><span
-                        >Openchat</span
-                    >
+                    <img
+                        src="https://lambent-daifuku-570a42.netlify.app/More%20Page/Openchat.PNG"
+                    /><span>Openchat</span>
                 </div>
             </div>
 
@@ -98,7 +107,9 @@
                 <div class="more-suggestions__icons">
                     <div class="more-suggestions__icon">
                         <div class="more-suggestions__icon-image">
-                            <img src="image/More Page/kokoa story.PNG" />
+                            <img
+                                src="https://lambent-daifuku-570a42.netlify.app/More%20Page/kokoa%20story.PNG"
+                            />
                         </div>
                         <span class="more-suggestions__icon-text"
                             >Kokoa Story</span
@@ -107,7 +118,9 @@
 
                     <div class="more-suggestions__icon">
                         <div class="more-suggestions__icon-image">
-                            <img src="image/More Page/kokoa friends.PNG" />
+                            <img
+                                src="https://lambent-daifuku-570a42.netlify.app/More%20Page/kokoa%20friends.PNG"
+                            />
                         </div>
                         <span class="more-suggestions__icon-text"
                             >Kokoa Friends</span
@@ -116,7 +129,9 @@
 
                     <div class="more-suggestions__icon">
                         <div class="more-suggestions__icon-image">
-                            <img src="image/More Page/friends game.PNG" />
+                            <img
+                                src="https://lambent-daifuku-570a42.netlify.app/More%20Page/friends%20game.PNG"
+                            />
                         </div>
                         <span class="more-suggestions__icon-text"
                             >Friends Game</span
