--- a/settings.html
+++ b/settings.html
@@ -44,56 +44,72 @@
             <ul class="settings-list">
                 <li class="settings__setting">
                     <div class="settings__setting-column">
-                        <img src="image/Setting Page/Notices.PNG" />
+                        <img
+                            src="https://lambent-daifuku-570a42.netlify.app/Setting%20Page/Notices.PNG"
+                        />
                         <span>Notices</span>
                     </div>
                     <div class="settings_-setting-column"></div>
                 </li>
                 <li class="settings__setting">
                     <div class="settings_-setting-column">
-                        <img src="image/Setting Page/Kokoa Lab.PNG" />
+                        <img
+                            src="https://lambent-daifuku-570a42.netlify.app/Setting%20Page/Kokoa%20Lab.PNG"
+                        />
                         <span>Kokoa Lab</span>
                     </div>
                     <div class="settings__setting-column"></div>
                 </li>
                 <li class="settings__setting">
                     <div class="settings_-setting-column">
-                        <img src="image/Setting Page/Version.PNG" />
+                        <img
+                            src="https://lambent-daifuku-570a42.netlify.app/Setting%20Page/Version.PNG"
+                        />
                         <span>Version</span>
                     </div>
                     <div class="settings__setting-column">Latest Version</div>
                 </li>
                 <li class="settings__setting">
                     <div class="settings__setting-column">
-                        <img src="image/Setting Page/Privacy.PNG" />
+                        <img
+                            src="https://lambent-daifuku-570a42.netlify.app/Setting%20Page/Privacy.PNG"
+                        />
                         <span>Privacy</span>
                     </div>
                     <div class="settings_-setting-column"></div>
                 </li>
                 <li class="settings__setting">
                     <div class="settings_-setting-column">
-                        <img src="image/Setting Page/Notifications.PNG" />
+                        <img
+                            src="https://lambent-daifuku-570a42.netlify.app/Setting%20Page/Notifications.PNG"
+                        />
                         <span>Notifications</span>
                     </div>
                     <div class="settings__setting-column"></div>
                 </li>
                 <li class="settings__setting">
                     <div class="settings_-setting-column">
-                        <img src="image/Setting Page/Friends.PNG" />
+                        <img
+                            src="https://lambent-daifuku-570a42.netlify.app/Setting%20Page/Friends.PNG"
+                        />
                         <span>Friends</span>
                     </div>
                     <div class="settings__setting-column"></div>
                 </li>
                 <li class="settings__setting">
                     <div class="settings__setting-column">
-                        <img src="image/Setting Page/Chats.PNG" />
+                        <img
+                            src="https://lambent-daifuku-570a42.netlify.app/Setting%20Page/Chats.PNG"
+                        />
                         <span>Chats</span>
                     </div>
                     <div class="settings_-setting-column"></div>
                 </li>
                 <li class="settings__setting">
                     <div class="settings_-setting-column">
-                        <img src="image/Setting Page/Display.PNG" />
+                        <img
+                            src="https://lambent-daifuku-570a42.netlify.app/Setting%20Page/Display.PNG"
+                        />
                         <span>Display</span>
                     </div>
                     <div class="new-badge">N</div>
@@ -101,7 +117,9 @@
                 </li>
                 <li class="settings__setting">
                     <div class="settings_-setting-column">
-                        <img src="image/Setting Page/Themes.PNG" />
+                        <img
+                            src="https://lambent-daifuku-570a42.netlify.app/Setting%20Page/Themes.PNG"
+                        />
                         <span>Themes</span>
                     </div>
                     <div class="new-badge">N</div>
@@ -110,7 +128,7 @@
                 <li class="settings__setting">
                     <div class="settings_-setting-column">
                         <img
-                            src="image/Setting Page/Call.PNG"
+                            src="https://lambent-daifuku-570a42.netlify.app/Setting%20Page/Call.PNG"
                             width="25px"
                             height="25px"
                         />
