Chat Screen part One

--- a/chat.html
+++ b/chat.html
@@ -26,6 +26,8 @@
             </div>
         </div>
 
+        <div class="background-bar"></div>
+
         <header class="alt-header">
             <div class="alt-header__column">
                 <a href="javascript:history.back();">
@@ -47,7 +49,9 @@
             </div>
         </header>
 
-        <main class="main-screen"></main>
+        <main class="main-screen main-chat">
+            <div class="chat__timestamp">Tuesday, June 30, 2022</div>
+        </main>
 
         <script
             src="https://kit.fontawesome.com/75ea5a755a.js"
