Chat Screen part Four

--- a/chat.html
+++ b/chat.html
@@ -61,10 +61,8 @@
                 <div class="message-row__content">
                     <span class="message__author">Kokoa Talk</span>
                     <div class="message__info">
-                        <span class="message__bubble"
-                            >Please check My Kokoa Account Info</span
-                        >
-                        <div class="message__time"></div>
+                        <span class="message__bubble">Hello!</span>
+                        <div class="message__time">21:27</div>
                     </div>
                 </div>
             </div>
