Write Message Input

--- a/chat.html
+++ b/chat.html
@@ -92,6 +92,19 @@
             </div>
         </main>
 
+        <form class="reply">
+            <div class="reply__column">
+                <img src="image/Chat Page/Plus.PNG" />
+            </div>
+            <div class="reply__column">
+                <input type="text" placeholder="Hi!" />
+                <img src="image/Chat Page/Smile.PNG" />
+                <button>
+                    <img src="image/Chat Page/Arrow-up.PNG" />
+                </button>
+            </div>
+        </form>
+
         <script
             src="https://kit.fontawesome.com/75ea5a755a.js"
             crossorigin="anonymous"
