--- a/image/index.html
+++ b/image/index.html
@@ -44,7 +44,11 @@
             </div>
             <br />
 
-            <div class="chat-page"></div>
+            <div class="chat-page">
+                <img src="Chat Page/Arrow-up.PNG" />
+                <img src="Chat Page/Plus.PNG" />
+                <img src="Chat Page/Smile.PNG" />
+            </div>
         </div>
     </body>
 </html>
