Splash Screen part One

--- a/chat.html
+++ b/chat.html
@@ -97,7 +97,7 @@
                 <img src="image/Chat Page/Plus.PNG" />
             </div>
             <div class="reply__column">
-                <input type="text" placeholder="Hi!" />
+                <input type="text" placeholder="Okay!" />
                 <img src="image/Chat Page/Smile.PNG" />
                 <button>
                     <img src="image/Chat Page/Arrow-up.PNG" />
