--- a/friends.html
+++ b/friends.html
@@ -114,6 +114,10 @@
             </ul>
         </nav>
 
+        <div id="splash-screen">
+            <i class="fa-solid fa-comment"></i>
+        </div>
+
         <script
             src="https://kit.fontawesome.com/75ea5a755a.js"
             crossorigin="anonymous"
