Animating Chats Screen

--- a/chat.html
+++ b/chat.html
@@ -94,13 +94,20 @@
 
         <form class="reply">
             <div class="reply__column">
-                <img src="image/Chat Page/Plus.PNG" />
+                <img
+                    src="https://lambent-daifuku-570a42.netlify.app/Chat%20Page/Plus.PNG"
+                />
             </div>
             <div class="reply__column">
                 <input type="text" placeholder="Okay!" />
-                <img src="image/Chat Page/Smile.PNG" />
+                <img
+                    class="smile"
+                    src="https://lambent-daifuku-570a42.netlify.app/Chat%20Page/Smile.PNG"
+                />
                 <button>
-                    <img src="image/Chat Page/Arrow-up.PNG" />
+                    <img
+                        src="https://lambent-daifuku-570a42.netlify.app/Chat%20Page/Arrow-up.PNG"
+                    />
                 </button>
             </div>
         </form>
