--- a/chat.html
+++ b/chat.html
@@ -112,6 +112,10 @@
             </div>
         </form>
 
+        <div id="no-mobile">
+            <span>Your screen is too big</span>
+        </div>
+
         <script
             src="https://kit.fontawesome.com/75ea5a755a.js"
             crossorigin="anonymous"
