--- a/find.html
+++ b/find.html
@@ -186,6 +186,10 @@
             </ul>
         </nav>
 
+        <div id="no-mobile">
+            <span>Your screen is too big</span>
+        </div>
+
         <script
             src="https://kit.fontawesome.com/75ea5a755a.js"
             crossorigin="anonymous"
