--- a/friends.html
+++ b/friends.html
@@ -118,6 +118,10 @@
             <i class="fa-solid fa-comment"></i>
         </div>
 
+        <div id="no-mobile">
+            <span>Your screen is too big</span>
+        </div>
+
         <script
             src="https://kit.fontawesome.com/75ea5a755a.js"
             crossorigin="anonymous"
