--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             <a href="#">Find Kokoa Account or Password</a>
         </form>
 
+        <div id="no-mobile">
+            <span>Your screen is too big</span>
+        </div>
+
         <script
             src="https://kit.fontawesome.com/75ea5a755a.js"
             crossorigin="anonymous"
