--- a/kokoatalk challenge/Assignment_4/index.html
+++ b/kokoatalk challenge/Assignment_4/index.html
@@ -7,5 +7,20 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="top">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+      </div>
+      <div class="bottom">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+      </div>
+    </main>
+  </body>
 </html>
